--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -310,12 +310,13 @@ The larger the value of $S^2$, the more spread-out the cluster is, since large $
 Note, however, that "large" is relative to *both* the scale of the variables for clustering *and* the number of points in the cluster. A cluster where points are very close to the center might still have a large $S^2$ if there are many data points in the cluster.
 
 After we have calculated the WSSD for all the clusters, 
-we sum them together to to get the *total WSSD*.
+we sum them together to get the *total WSSD*.
 For our example, 
-this means adding up all the distances of the black lines in 
+this means adding up all the squared distances for the 18 observations.
+These distances are denoted by black lines in
 Figure \@ref(fig:10-toy-example-all-clus-dists).
 
-```{r 10-toy-example-all-clus-dists, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 5, fig.cap = "All clusters from the `penguin_data` data set example. Observations are in orange blue, and yellow with the cluster center highlighted in red. The distances from the observations to each of the respective cluster centers are represented as black lines."}
+```{r 10-toy-example-all-clus-dists, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 5, fig.cap = "All clusters from the `penguin_data` data set example. Observations are in orange, blue, and yellow with the cluster center highlighted in red. The distances from the observations to each of the respective cluster centers are represented as black lines."}
 
 
 all_clusters_base <- data |>
