--- a/viz.Rmd
+++ b/viz.Rmd
@@ -318,7 +318,7 @@ Let's now try to visualize the `co2_df` as a line plot
 with just the default arguments: 
 \index{ggplot!geom\_line}
 
-```{r 03-data-co2-line, warning=FALSE, message=FALSE, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time"}
+```{r 03-data-co2-line, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time"}
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_line()
 
@@ -351,7 +351,7 @@ change the font size, we use the `theme` function with the `text` argument:
 > Interested readers may consult the `theme` function documentation;
 > see the additional resources section at the end of this chapter.
 
-```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time with clearer axes and labels"}
+```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time with clearer axes and labels"}
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_line() +
   xlab("Year") +
@@ -385,7 +385,7 @@ to convert the character strings we provide to `c` to `date` vectors.
 > but is not loaded by it. 
 > Hence we need to load it separately in the code below.
 
-```{r 03-data-co2-line-3, warning = FALSE, message = FALSE, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ from 1990 to 1994"}
+```{r 03-data-co2-line-3, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ from 1990 to 1994"}
 library(lubridate)
 
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
