minor ed to reg1

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -213,12 +213,14 @@ lm_fit <- workflow() |>
 lm_fit
 ```
 
-> An additional difference that you will notice below is that we do not standardize \index{standardization}
-> (i.e., scale and center) our predictors. In K-nearest neighbours models, recall that 
-> the model fit changes depending on whether we standardize first or not. In linear regression,
-> standardization does not affect the fit (it *does* affect the coefficients in the equation, though!).
-> So you can standardize if you want&mdash;it won't hurt anything&mdash;but if you leave the
-> predictors in their original form, the best fit coefficients are usually easier to interpret afterward.
+> **Note:** An additional difference that you will notice here is that we do
+> not standardize \index{standardization} (i.e., scale and center) our
+> predictors. In K-nearest neighbours models, recall that the model fit changes
+> depending on whether we standardize first or not. In linear regression,
+> standardization does not affect the fit (it *does* affect the coefficients in
+> the equation, though!).  So you can standardize if you want&mdash;it won't
+> hurt anything&mdash;but if you leave the predictors in their original form,
+> the best fit coefficients are usually easier to interpret afterward.
 
 Our coefficients are 
 (intercept) $\beta_0=$ `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), scientific=FALSE)`
