--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -12,7 +12,8 @@ we will split our data into training, validation, and test sets, we will
 use `tidymodels` workflows, we will use a K-nearest neighbours (KNN) 
 approach to make predictions, and we will use cross-validation to choose K.
 Because of how similar these procedures are, make sure to read Chapters
-6 and 7 before reading this one---we will move a little bit faster here with the
+\@ref(classification) and \@ref(classification2) before reading 
+this one---we will move a little bit faster here with the
 concepts that have already been covered.
 This chapter will primarily focus on the case where there is a single predictor, 
 but the end of the chapter shows how to perform
@@ -29,9 +30,9 @@ By the end of the chapter, readers will be able to:
 * Interpret the output of a KNN regression.
 * In a dataset with two or more variables, perform K-nearest neighbour regression in R using a `tidymodels` workflow
 * Execute cross-validation in R to choose the number of neighbours.
-* Evaluate KNN regression prediction accuracy in R using a test data set and an appropriate metric (*e.g.*, root means square prediction error).
+* Evaluate KNN regression prediction accuracy in R using a test data set and the root mean squared prediction error (RMSPE).
 * In the context of KNN regression, compare and contrast goodness of fit and prediction properties (namely RMSE vs RMSPE).
-* Describe the advantages and disadvantages of the K-nearest neighbour regression approach.
+* Describe the advantages and disadvantages of K-nearest neighbours regression.
 
 ## The regression problem
 
@@ -588,16 +589,11 @@ to new data that it has never seen before.
 However, much like in the case of KNN classification, whether this value for RMSPE is *good*&mdash;i.e.,
 whether an error of around $`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`
 is acceptable&mdash;depends entirely on the application. 
-
-In this application, purchase of a home, 
-$`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)` 
-is not a terrible error, but it is not that great either. 
-The y-axis scale is about $`r format(round(800000), big.mark=",", nsmall=0, scientific=FALSE)`, 
-and the error is about 10% of that. 
-Depending on someone's budget, a difference of 
-$`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)` 
+In this application, this error
+is not prohibitively large, but it is not negligible either; 
+$`r format(round(sacr_summary |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`
+might represent a substantial fraction of a home buyer's budget, and
 could make or break whether or not they could afford put an offer on a house. 
-At least in the low-mid-range of the data.
 
 Finally, Figure \@ref(fig:07-predict-all) shows the predictions that our final model makes across
 the range of house sizes we might encounter in the Sacramento area&mdash;from 500 to 5000 square feet. 
