some code formatting fixes

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -491,6 +491,8 @@ And is there a pattern in the strength of this relationship in the
 higher-level language categories (Official languages, Aboriginal languages, or
 non-official and non-Aboriginal languages)?
 
+To get started, we will read and inspect the data:
+
 ```{r 03-canlang-example, message = F, warning = F}
 can_lang <- read_csv("data/can_lang.csv")
 can_lang
@@ -622,8 +624,8 @@ you can clearly see the mutated output from the table.
 ```{r}
 can_lang <- can_lang |>
   mutate(
-    mother_tongue_percent = (mother_tongue / 35151728)*100,
-    most_at_home_percent = (most_at_home / 35151728)*100
+    mother_tongue_percent = (mother_tongue / 35151728) * 100,
+    most_at_home_percent = (most_at_home / 35151728) * 100
   )
 
 can_lang |> 
@@ -693,7 +695,9 @@ color the points according to their group and add a legend at the side of the
 plot. 
 
 ```{r 03-scatter-color-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category"}
-ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color = category)) +
+ggplot(can_lang, aes(x = most_at_home_percent, 
+                     y = mother_tongue_percent, 
+                     color = category)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
        y = "Mother tongue \n (percentage of Canadian residents)") +
@@ -735,7 +739,8 @@ further improve the clarity and accessibility of your visualization.
 ```{r scatter-color-by-category-palette, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors"}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
-                     color = category, shape = category)) +
+                     color = category, 
+                     shape = category)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
        y = "Mother tongue \n (percentage of Canadian residents)") +
@@ -829,6 +834,8 @@ islands_df <- mutate(islands_df,
 
 write_csv(islands_df, "data/islands.csv")
 ```
+
+To get started, we will read and inspect the data:
 
 ```{r 03-data-islands, warning=FALSE, message=FALSE}
 # islands data
