american spelling, changing underscore to dash in code blocks and minor spelling/grammar fixes in intro, index, reading, and wrangling

--- a/index.Rmd
+++ b/index.Rmd
@@ -65,9 +65,9 @@ all the tasks associated with data analysis. You will
 spend the first four chapters learning how to use R to load, clean, wrangle
 (i.e., restructure the data into a usable format) and visualize data
 while answering descriptive and exploratory data analysis questions. In the next
-six chapters you will learn how to answer predictive, exploratory and inferential
+six chapters, you will learn how to answer predictive, exploratory, and inferential
 data analysis questions with common methods in data science, including
-classification, regression, clustering and estimation.
+classification, regression, clustering, and estimation.
 In the final chapters 
 (\@ref(getting-started-with-jupyter) - \@ref(move-to-your-own-machine)), 
 you will learn how to combine R code, formatted text, and images
@@ -75,7 +75,7 @@ in a single coherent document with Jupyter, use version control for
 collaboration, and install and configure the software needed for data science
 on your own computer. If you are reading this book as part of a course that you are
 taking, the instructor may have set up all of these tools already for you; in this 
-case you can continue on through the book reading the chapters in order.
+case, you can continue on through the book reading the chapters in order.
 But if you are reading this independently, you may want to jump to these last three chapters 
 early before going on to make sure your computer is set up in such a way that you can
 try out the example code that we include throughout the book. 
