--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -47,7 +47,7 @@ we learned how to import data into R as a data frame, and perform basic operatio
 In the remainder of this book, this pattern continues. The vast majority of tools we use will require 
 that data are represented as a data frame in R. Therefore, in this section,
 we will dig more deeply into what data frames are and how they are represented in R.
-This knowledge will helpful in effectively utilizing these objects in our data analyses.
+This knowledge will be helpful in effectively utilizing these objects in our data analyses.
 
 ### What is a data frame?
 
@@ -306,7 +306,7 @@ The `pivot_longer` function combines columns,
 and is usually used during tidying data 
 when we need to make the data frame longer and narrower. 
 To learn how to use `pivot_longer`, we will work through an example with the
-`region_lang_top5_cities_wide.csv` data set. This data set contains contains the
+`region_lang_top5_cities_wide.csv` data set. This data set contains the
 counts of how many Canadians cited each language as their mother tongue for five 
 major Canadian cities (Toronto, Montréal, Vancouver, Calgary and Edmonton) from
 the 2016 Canadian census.  \index{Canadian languages}
@@ -392,7 +392,7 @@ Suppose we have observations spread across multiple rows rather than in a single
 row. For example, in Figure \@ref(fig:long-to-wide), the table on the left is in an
 untidy, long format because the `count` column contains two variables
 (population and commuter count) and information about each observation 
-(here population and commuter counts for a region) is split across two rows. 
+(here, population and commuter counts for a region) is split across two rows. 
 Remember: one of the criteria for tidy data 
 is that each observation must be in a single row.
 
@@ -551,7 +551,7 @@ messy data set. R read these columns in as character types, and by default,
 
 It makes sense for `region`, `category`, and `language` to be stored as a
 character (or perhaps factor) type. However, suppose we want to apply any functions that treat the
-`most_at_home` and `most_at_work` columns as a number (e.g. finding rows 
+`most_at_home` and `most_at_work` columns as a number (e.g., finding rows 
 above a numeric threshold of a column). 
 In that case, 
 it won't be possible to do if the variable is stored as a `character`. 
@@ -871,7 +871,7 @@ number, we need context. In particular, how many people were in Toronto when
 this data was collected? From the 2016 Canadian census profile, the population
 of Toronto was reported to be
 `r format(toronto_popn, scientific = FALSE, big.mark = ",")` people. 
-The number of people who report that English was their primary language at home 
+The number of people who report that English as their primary language at home 
 is much more meaningful when we report it in this context. 
 We can even go a step further and transform this count to a relative frequency 
 or proportion.
@@ -1038,8 +1038,8 @@ output <- data |>
 > and is from the `magrittr` R package. 
 > The `tidyverse` metapackage imports the `%>%` pipe operator via `dplyr` 
 > (which in turn imports the `magrittr` R package).
-> In more advanced R use related to sharing and distributing code as R packages,
-> there are some other drawbacks to using `%>%` compared to `|>`, 
+> There are some other differences between `%>%` and `|>` related to 
+> more advanced R uses, such as sharing and distributing code as R packages, 
 > however these are beyond the scope of this textbook. 
 > We have this note in the book to make the reader aware that `%>%` exists
 > as it still commonly used in data analysis code and in many data science 
@@ -1088,7 +1088,7 @@ van_data_selected <- tidy_lang |>
 van_data_selected
 ```
 
-But wait...Why does our `select` and `filter` function calls 
+But wait...Why do our `select` and `filter` function calls 
 look different in these two examples? 
 Remember: when you use the pipe, 
 the output of the first function is automatically provided 
@@ -1160,7 +1160,7 @@ data (a *summary statistic*). \index{summarize}
 Examples of summary statistics we might want to calculate 
 are the number of observations, the average/mean value for a column, 
 the minimum value, etc. 
-Often times, 
+Oftentimes, 
 this summary statistic is calculated from the values in a data frame column, 
 or columns, as shown in Figure \@ref(fig:summarize).
 
@@ -1260,7 +1260,7 @@ and then calculate the minimum and maximum number of Canadians
 reporting the language as the primary language at home 
 for each of the regions in the data set.
 
-```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize` + `group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The grey, blue and green coloured rows correspond to the rows that belong to each of three groups being represented in this cartoon example.", out.width="100%", fig.retina = 2}
+```{r summarize-groupby, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`summarize` + `group_by` is useful for calculating summary statistics on one or more column(s) for each group. It creates a new data frame&mdash;with one row for each group&mdash;containing the summary statistic(s) for each column being summarized. It also creates a column listing the value of the grouping variable. The darker, top row of each table represents the column headers. The grey, blue and green colored rows correspond to the rows that belong to each of the three groups being represented in this cartoon example.", out.width="100%", fig.retina = 2}
 image_read("img/summarize/summarize.002.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
@@ -1409,7 +1409,7 @@ region_lang |>
 > **Note on calculating summary statistics with `map` when there are `NA`s**:
 > 
 > Similarly to when we use base R statistical summary functions 
-> (e.g., `max`, `min`, `mean`, `sum`, etc) with `summarize`, 
+> (e.g., `max`, `min`, `mean`, `sum`, etc.) with `summarize`, 
 > `map` functions paired with base R statistical summary functions
 > also return `NA` values when we apply them to columns that 
 > contain `NA` values. \index{missing data}
@@ -1470,7 +1470,7 @@ region_lang |>
 
 We see that we get back a data frame
 with the same number of columns and rows.
-The only thing that changes is the tranformation we applied 
+The only thing that changes is the transformation we applied 
 to the specified columns (here `mother_tongue` to `lang_known`).
 
 ## Apply functions across columns within one row with `rowwise` and `mutate`
@@ -1516,7 +1516,7 @@ region_lang |>
 ```
 
 We see that we get an additional column added to our data frame, 
-named `maximum`, which is the the maximum value between `mother_tongue`,
+named `maximum`, which is the maximum value between `mother_tongue`,
 `most_at_home`, `most_at_work` and `lang_known` for each language
 and region. 
 
@@ -1568,14 +1568,14 @@ Table: (#tab:summary-functions-table) Summary of wrangling functions
 
 ## Additional resources 
 
-  - As we mentioned earlier, `tidyverse` is actually a *R
+  - As we mentioned earlier, `tidyverse` is actually an *R
     meta package*: it installs and loads a collection of R packages that all
     follow the tidy data philosophy we discussed above. One of the `tidyverse`
     packages is `dplyr` - a data wrangling workhorse. You have already met many
     of `dplyr`'s functions 
     (`select`, `filter`, `mutate`, `arrange`, `summarize`, and `group_by`). 
     To learn more about these functions and meet a few more useful
-    functions, we recommend you checkout [this
+    functions, we recommend you check out [this
     chapter](http://stat545.com/block010_dplyr-end-single-table.html#where-were-we)
     of the Data wrangling, exploration, and analysis with R book.
   - The [`dplyr` page on the tidyverse website](https://dplyr.tidyverse.org/) is
