--- a/intro.Rmd
+++ b/intro.Rmd
@@ -3,7 +3,7 @@
 
 This chapter provides an introduction to data science and the R programming language.
 The goal here is to get your hands dirty right from the start: we will walk through an entire data analysis,
-and along the way introduce different types of data analysis questions, some fundamental programming 
+and along the way, introduce different types of data analysis questions, some fundamental programming 
 concepts in R, and the basics of loading, cleaning, and visualizing data. In the following chapters, we will
 dig into each of these steps in much more detail; but for now, let's jump in to see how much we can do 
 with data science!
@@ -41,7 +41,7 @@ Canada's [Calls to Action](http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf
 The data set we will study in this chapter is taken from 
 [the {canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has
 population language data collected during the 2016 Canadian census [@cancensus2016]. 
-In this data there are 214 languages recorded, each having 6 different properties:
+In this data, there are 214 languages recorded, each having six different properties:
 
 1. `category`: Higher-level language category, describing whether the language is an Official Canadian language, an Aboriginal (i.e., Indigenous) language, or a Non-Official and Non-Aboriginal language.
 2. `language`: The name of the language.
@@ -116,7 +116,7 @@ This is covered in detail in Chapter \@ref(viz), but again appears regularly thr
 3. **Classification:** \index{classification!overview} predicting a class or category for a new observation.
 Classification is used to answer predictive questions.
 For example, you might use classification to answer the following question:
-*given measurements of a tumour's average cell area and perimeter, is the tumour benign or malignant?*
+*given measurements of a tumor's average cell area and perimeter, is the tumor benign or malignant?*
 Classification is covered in Chapters \@ref(classification) and \@ref(classification2).
 4. **Regression:**  \index{regression!overview} predicting a quantitative value for a new observation. 
 Regression is also used to answer predictive questions.
@@ -128,7 +128,7 @@ dataset. Clustering is often used to answer exploratory questions.
 For example, you might use clustering to answer the following question:
 *what products are commonly bought together on Amazon?*
 Clustering is covered in Chapter \@ref(clustering).
-6. **Estimation:**  \index{estimation!overview} taking measurements for small number of items from a large group 
+6. **Estimation:**  \index{estimation!overview} taking measurements for a small number of items from a large group 
  and making a good guess for the average or proportion for the large group. Estimation 
 is used to answer inferential questions.
 For example, you might use estimation to answer the following question:
@@ -180,7 +180,7 @@ text with no formatting), we would see each row on its own line, and each entry 
 head -n 10 data/can_lang.csv
 ```
 
-To load this data into R so that we can do things with it (e.g, perform
+To load this data into R so that we can do things with it (e.g., perform
 analyses or create data visualizations), we will need to use a *function.* \index{function} A
 function is a special word in R that takes instructions (we call these
 *arguments*) \index{argument} and does something. The function we will use to load a `.csv` file
@@ -204,7 +204,7 @@ using the `library` function. \index{library} The `tidyverse` \index{tidyverse} 
 functions that we will use throughout this book to load, clean, wrangle, 
 and visualize data. 
 
-```{r load_tidyverse, message = TRUE, warning = TRUE}
+```{r load-tidyverse, message = TRUE, warning = TRUE}
 library(tidyverse)
 ```
 > **In case you want to know more (optional):** Notice that we got some extra
@@ -214,7 +214,7 @@ library(tidyverse)
 > natural when loading `tidyverse`, since `tidyverse` actually automatically
 > causes other packages to be imported too, such as `dplyr`.  In the future
 > when we load `tidyverse` in this book we will silence these messages to help
-> with readability of the book.  The `Conflicts` message is also totally normal
+> with the readability of the book.  The `Conflicts` message is also totally normal
 > in this circumstance.  This message tells you if functions from different
 > packages share the same name, which is confusing to R.  For example, in this
 > case, the `dplyr` package and the `stats` package both provide a function
@@ -240,7 +240,7 @@ to read data into R.
 knitr::include_graphics("img/read_csv_function.jpeg")
 ```
 
-```{r load_can_lang_data, warning=F, message=F}
+```{r load-can-lang-data, warning=F, message=F}
 read_csv("data/can_lang.csv")
 ```
 
@@ -317,7 +317,7 @@ Guide](https://principles.tidyverse.org/names-attribute.html#universal-names)
 `can_lang` to the 2016 Canadian census language data frame that we get from
 `read_csv`. 
 
-```{r load_data_with_name, message=FALSE}
+```{r load-data-with-name, message=FALSE}
 can_lang <- read_csv("data/can_lang.csv")
 ```
 
@@ -585,7 +585,7 @@ n.o.s. with over 60,000 Canadian residents reporting it as their mother tongue.
 In the block of code below, we put everything from this chapter together, with a few
 modifications. In particular, we have
 added a few more layers to make the data visualization even more effective.
-Specifically, we changed the colour of the bars and changed the background from
+Specifically, we changed the color of the bars and changed the background from
 grey to white to improve the contrast. We have also actually skipped the
 `select` step that we did above; since you specify the variable names to plot
 in the `ggplot` function, you don't actually need to `select` the columns in advance
