--- a/reading.Rmd
+++ b/reading.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(message = FALSE)
 ## Overview 
 
 In this chapter, you’ll learn to read tabular data of various formats into R
-from your local device (e.g. your laptop) and the web. “Reading” (or “loading”)
+from your local device (e.g., your laptop) and the web. “Reading” (or “loading”)
 \index{loading|see{reading}}\index{reading!definition} is the process of
 converting data (stored as plain text, a database, HTML, etc.) into an object
 (e.g., a data frame) that R can easily access and manipulate. Thus reading data
@@ -51,7 +51,7 @@ By the end of the chapter, readers will be able to:
 - (*optional*) obtain data using **a**pplication **p**rogramming **i**nterfaces (APIs) and web scraping
     - read HTML source code from a URL using the `rvest` package
     - read data from the Twitter API using the `rtweet` package
-    - compare downloading tabular data from a plain text file (e.g. `.csv`), accessing data from an API, and scraping the HTML source code from a website
+    - compare downloading tabular data from a plain text file (e.g., `.csv`), accessing data from an API, and scraping the HTML source code from a website
 
 ## Absolute and relative file paths
 
@@ -170,7 +170,7 @@ library(tidyverse)
 Next we use `read_csv` to load the data into R, and in that call we specify the
 relative path to the file.
 
-```{r load_data, message = TRUE}
+```{r load-data, message = TRUE}
 canlang_data <- read_csv("data/can_lang.csv")
 ```
 
@@ -179,9 +179,9 @@ canlang_data <- read_csv("data/can_lang.csv")
 > the `read_csv` and related functions. This message lets you know the data types
 > of each of the columns that R inferred while reading the data into R.  In
 > future when we use this and related functions to load data in this book we will
-> silence these messages to help with readability of the book.
+> silence these messages to help with the readability of the book.
 
-```{r view_data}
+```{r view-data}
 canlang_data
 ```
 
@@ -228,7 +228,7 @@ canlang_data <- read_csv("data/can_lang_meta-data.csv",
 canlang_data
 ```
 
-How did we know to skip 3 lines? We looked at the data! The first three lines
+How did we know to skip three lines? We looked at the data! The first three lines
 of the data had information we didn't need to import: 
 
 ```{bash, echo=FALSE, comment=NA}
@@ -302,7 +302,7 @@ don't have column names, R will assign names automatically. In the example
 above, R assigns each column a name of `X1, X2, X3, X4, X5, X6`.
 
 It is best to rename your columns to help differentiate between them 
-(e.g. `X1, X2`, etc., are not very descriptive names and will make it more confusing as
+(e.g., `X1, X2`, etc., are not very descriptive names and will make it more confusing as
 you code). To rename your columns, you can use the `rename` function
 \index{rename} from the `dplyr` \index{dplyr} package (one of the packages
 loaded with `tidyverse`, so we don't need to load it separately). The first
@@ -345,7 +345,7 @@ it into R. Previewing data is essential to see whether or not there are column
 names, what the delimiters are, and if there are lines you need to skip. You
 should do this yourself when trying to read in data files. You can preview
 files in a plain text editor by right-clicking on the file, selecting "Open
-With," and choosing a plain text editor (e.g. Notepad). 
+With," and choosing a plain text editor (e.g., Notepad). 
 
 
 ## Reading tabular data from a Microsoft Excel file
@@ -418,7 +418,7 @@ makes reading in data more difficult).
 
 As with plain text files, you should always explore the data file before
 importing it into R. Exploring the data beforehand helps you decide which
-arguments you need to to load the data into R successfully. If you do not have
+arguments you need to load the data into R successfully. If you do not have
 the Excel program on your computer, you can use other programs to preview the
 file. Examples include Google Sheets and Libre Office. 
 
@@ -446,7 +446,7 @@ Excel files (`.xlsx`) | `read_excel` | `readxl`
 ## Reading data from a database
 
 Another very common form of data storage is the relational database. Databases
-\index{database} are great when you have large datasets or multiple users
+\index{database} are great when you have large data sets or multiple users
 working on a project. There are many relational database management systems,
 such as [SQLite](https://www.sqlite.org/index.html),
 [MySQL](https://www.mysql.com/), [PostgreSQL](https://www.postgresql.org/),
@@ -497,7 +497,7 @@ database to do things like select columns and filter rows, we use the `tbl`
 function \index{database!tbl} from the `dbplyr` package. The package `dbplyr`
 \index{dbplyr|see{database}}\index{database!dbplyr} allows us to work with data
 stored in databases as if they were local data frames, which is useful because
-we can do a lot with big datasets without actually having to bring these vast
+we can do a lot with big data sets without actually having to bring these vast
 amounts of data into your computer! 
 
 ```{r}
@@ -566,7 +566,7 @@ in a data frame: \index{nrow}
 nrow(aboriginal_lang_db)
 ```
  
-or `tail` to preview the last 6 rows of a data frame:
+or `tail` to preview the last six rows of a data frame:
 \index{tail}
 
 ```{r, eval = FALSE}
@@ -761,7 +761,7 @@ on, it is increasingly uncommon to find data (especially large amounts of data)
 in this format available for download from a URL. Instead, websites now often
 offer something known as an **a**pplication **p**rogramming **i**nterface
 (API), \index{application programming interface|see{API}}\index{API} which
-provides a programmatic way to ask for subsets of a dataset. This allows the
+provides a programmatic way to ask for subsets of a data set. This allows the
 website owner to control *who* has access to the data, *what portion* of the
 data they have access to, and *how much* data they can access.  Typically, the
 website owner will give you a *token* (a secret string of characters somewhat
@@ -785,9 +785,9 @@ see, you can collect that data programmatically---in the form of
 and **c**ascading **s**tyle **s**heet (CSS) code---and process it 
 to extract useful information. HTML provides the
 basic structure of a site and tells the webpage how to display the content
-(e.g. titles, paragraphs, bullet lists etc.). Whereas CSS helps style the
+(e.g., titles, paragraphs, bullet lists etc.). Whereas CSS helps style the
 content and tells the webpage how the HTML elements should 
-be presented (e.g. colours, layouts, fonts etc.). 
+be presented (e.g., colors, layouts, fonts etc.). 
 
 This subsection will show you the basics of both web scraping
 with the [`rvest` R package](https://github.com/hadley/rvest)
@@ -882,7 +882,7 @@ Let's dig into that line \index{HTML!tag} above a bit more. You can see that
 that bit of code has an *opening tag* (words between `<` and `>`, like
 `<span>`) and a *closing tag* (the same with a slash, like `</span>`). HTML
 source code generally stores its data between opening and closing tags like
-these. Tags are keywords which tell the web browser how to display or format
+these. Tags are keywords that tell the web browser how to display or format
 the content. Above you can see that the information we want (`$800`) is stored
 between an opening and closing tag (`<span>` and `</span>`). In the opening
 tag, you can also see a very useful "class" (a special word that is sometimes
@@ -982,7 +982,7 @@ td:nth-child(7),
 ```
 
 Now that we have the CSS selectors that describe the properties of the elements
-that we want to target (e.g. has a tag name `price`), we can use it to find
+that we want to target (e.g., has a tag name `price`), we can use them to find
 certain elements in web pages and extract data. 
 
 **Using `rvest`**
@@ -1008,7 +1008,7 @@ stored in the `page` variable. Next, we send the page object to the `html_nodes`
 function, along with the CSS selectors we obtained from
 the SelectorGadget tool. Make sure to surround the selectors with quotations; the function, `html_nodes`, expects that
 argument is a string. The `html_nodes` function then selects *nodes* from the HTML document that 
-match the CSS selectors you specified.  A *node* is an HTML tag pair (e.g.
+match the CSS selectors you specified.  A *node* is an HTML tag pair (e.g.,
 `<td>` and `</td>` which defines the cell of a table) combined with the content
 stored between the tags. For our CSS selector `td:nth-child(5)`, an example
 node that would be selected would be: 
@@ -1078,7 +1078,7 @@ along with the examples that we show here. To get started, load the `rtweet` pac
 library(rtweet)
 ```
 This package provides an extensive set of functions to search Twitter for tweets, users, their followers, and more. 
-Let's construct a small dataset of the last 400 tweets and retweets from the Tidyverse account. A few of the most recent tweets
+Let's construct a small data set of the last 400 tweets and retweets from the Tidyverse account. A few of the most recent tweets
 are shown below.
 
 
@@ -1152,12 +1152,12 @@ tidyverse_tweets <- tidyverse_tweets %>% select(created_at, retweet_screen_name,
 tidyverse_tweets
 ```
 If you look back up at the image of the Tidyverse twitter page, you will
-recognize the text of the most recent few tweets in the above dataframe.  In
-other words, we have successfully created a small dataset using the Twitter
+recognize the text of the most recent few tweets in the above data frame.  In
+other words, we have successfully created a small data set using the Twitter
 API---neat! This data is also quite different from what we obtained from web scraping;
-it is already well-organized into a `tidyverse` dataframe (although not *every* API
+it is already well-organized into a `tidyverse` data frame (although not *every* API
 will provide data in such a nice format).
- From this point onward, the `tidyverse_tweets` dataframe is stored on your
+ From this point onward, the `tidyverse_tweets` data frame is stored on your
 machine, and you can play with it to your heart's content. For example, you can use
 `write_csv` to save it to a file and `read_csv` to read it into R again later; 
 and after reading the next few chapters you will have the skills to
@@ -1172,7 +1172,7 @@ data you are requesting and how frequently you are making requests.
 - The [`readr` page on the tidyverse website](https://readr.tidyverse.org/) is where you should look if you want to learn more about the functions in this chapter, the full set of arguments you can use, and other related functions. The site also provides a very nice cheat sheet that summarizes many of the data wrangling functions from this chapter.
 - Sometimes you might run into data in such poor shape that none of the reading functions we cover in this chapter works. In that case, you can consult the [data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/), which goes into a lot more detail about how R parses text from files into data frames.
 - The documentation for many of the reading functions we cover in this chapter can be found [on the tidyverse website](https://readr.tidyverse.org/reference/read_delim.html). This site shows you the full set of arguments available for each function.
-- The [`here` package](https://cran.r-project.org/web/packages/here/index.html) provides a way for you to contruct or find your files' paths. 
+- The [`here` package](https://cran.r-project.org/web/packages/here/index.html) provides a way for you to construct or find your files' paths. 
 - The [`readxl` documentation](https://readxl.tidyverse.org/) provides more details on reading data from Excel, such as reading in data with multiple sheets, or specifying the cells to read in. 
 - The [`rio` package](https://github.com/leeper/rio) provides an alternative set of tools for reading and writing data in R. It aims to be a "Swiss army knife" for data reading/writing/converting, and supports a wide variety of data types (including data formats generated by other statistical software like SPSS and SAS).
 - This [video](https://www.youtube.com/embed/ephId3mYu9o) from the [Udacity course "Linux Command Line Basics"](https://www.udacity.com/course/linux-command-line-basics--ud595) provides a good explanation of absolute versus relative paths.
