--- a/index.Rmd
+++ b/index.Rmd
@@ -12,6 +12,7 @@ biblio-style: apalike
 link-citations: yes
 description: "This is a textbook for teaching a first introduction to data science."
 always_allow_html: true
+graphics: yes
 output:
   bookdown::gitbook:
     css: style.css
@@ -80,6 +81,6 @@ But if you are reading this independently, you may want to jump to these last th
 early before going on to make sure your computer is set up in such a way that you can
 try out the example code that we include throughout the book. 
 
-```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="1050pt", fig.retina = 2}
+```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/chapter_overview.jpeg")
 ```
